--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -33,6 +33,7 @@
 }
 .products-wrapper .product-item img {
   width: 200px;
+  object-fit: cover;
   max-width: 100%;
   margin: auto;
   cursor: pointer;
@@ -46,6 +47,9 @@
 }
 .products-wrapper .product-item .product-desc .rating {
   padding: var(--main-padding);
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 .products-wrapper .product-item .product-desc .price-add {
   padding: var(--main-padding);
