--- a/client/src/css/Footer/Footer.css
+++ b/client/src/css/Footer/Footer.css
@@ -1,73 +1,87 @@
-footer {
-  grid-area: footer;
-  height: fit-content;
-  padding: 20px;
+footer.footer-layout {
+  padding: 50px 0;
   background-color: var(--mainColor);
   color: var(--main-text-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+footer.footer-layout .container {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-footer > div {
+footer.footer-layout .container > div {
   width: 100%;
 }
-footer .title {
+footer.footer-layout .container .title {
   border-bottom: var(--main-border);
   margin-bottom: 10px;
   padding-bottom: 5px;
   width: fit-content;
 }
-footer .info {
+footer.footer-layout .container .info {
   display: flex;
-  justify-content: space-evenly;
   align-items: stretch;
-  gap: 10px;
+  justify-content: space-evenly;
+  gap: 15px;
 }
-footer .info .about {
+@media (max-width: 767px) {
+  footer.footer-layout .container .info {
+    flex-direction: column;
+    align-items: center;
+  }
+  footer.footer-layout .container .info .logo {
+    text-align: center;
+  }
+  footer.footer-layout .container .info .about,
+footer.footer-layout .container .info .contact {
+    align-items: center;
+  }
+  footer.footer-layout .container .info .about.about,
+footer.footer-layout .container .info .contact.about {
+    width: 350px;
+  }
+}
+footer.footer-layout .container .info .about {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 400px;
 }
-footer .info .contact {
+footer.footer-layout .container .info .contact {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-footer .info .contact .content > div {
+footer.footer-layout .container .info .contact .content > div {
   margin-top: 7px;
   display: flex;
   align-items: center;
   gap: 10px;
 }
-footer .info .contact .content > div svg {
+footer.footer-layout .container .info .contact .content > div svg {
   color: var(--main-text-color);
 }
-footer hr {
+footer.footer-layout .container hr {
   background-color: var(--second-color);
   width: 100%;
   height: 1px;
   border: none;
 }
-footer .social {
+footer.footer-layout .container .social {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-footer .social .icons {
+footer.footer-layout .container .social .icons {
   display: flex;
   align-items: center;
   gap: 5px;
 }
-footer .social .icons svg {
+footer.footer-layout .container .social .icons svg {
   color: var(--main-text-color);
   cursor: pointer;
   font-size: 30px;
 }
-footer .social .icons svg:hover {
+footer.footer-layout .container .social .icons svg:hover {
   transition: 0.3s;
   color: var(--second-color);
 }
