--- a/client/src/css/Login/Login.css
+++ b/client/src/css/Login/Login.css
@@ -1,15 +1,17 @@
-.login {
-  grid-area: main;
+.main-layout .login {
   color: #333;
   user-select: none;
-  margin: 10px 0;
+  min-height: var(--main-layout-height);
 }
-.login form.login-content {
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+.main-layout .login .container {
+  min-height: var(--main-layout-height);
+  display: flex;
+  align-items: center;
+}
+.main-layout .login .container form.login-content {
   width: 350px;
+  margin: auto;
+  max-width: 100%;
   text-align: center;
   border-radius: 20px;
   padding: 20px;
@@ -17,25 +19,25 @@
   box-shadow: var(--boxShadow);
   border: var(--boxes-border);
 }
-.login form.login-content .go-sign-up {
+.main-layout .login .container form.login-content .go-sign-up {
   display: block;
   color: var(--mainColor);
   margin-bottom: 20px;
 }
-.login form.login-content .login-box {
+.main-layout .login .container form.login-content .login-box {
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.login form.login-content .login-box .input-feild {
+.main-layout .login .container form.login-content .login-box .input-feild {
   display: flex;
   align-items: center;
   background-color: var(--body-color);
   box-shadow: var(--boxShadow);
 }
-.login form.login-content .login-box .input-feild input.name-input,
-.login form.login-content .login-box .input-feild input.pass-input {
+.main-layout .login .container form.login-content .login-box .input-feild input.name-input,
+.main-layout .login .container form.login-content .login-box .input-feild input.pass-input {
   width: 100%;
   display: block;
   padding: 10px;
@@ -48,34 +50,34 @@
   transition: 0.3s;
   border-left: var(--main-border);
 }
-.login form.login-content .login-box .input-feild input.name-input::placeholder,
-.login form.login-content .login-box .input-feild input.pass-input::placeholder {
+.main-layout .login .container form.login-content .login-box .input-feild input.name-input::placeholder,
+.main-layout .login .container form.login-content .login-box .input-feild input.pass-input::placeholder {
   color: #afafaf;
 }
-.login form.login-content .login-box .input-feild input.name-input:focus,
-.login form.login-content .login-box .input-feild input.pass-input:focus {
+.main-layout .login .container form.login-content .login-box .input-feild input.name-input:focus,
+.main-layout .login .container form.login-content .login-box .input-feild input.pass-input:focus {
   outline: none;
   padding-left: 15px;
 }
-.login form.login-content .login-box .input-feild input.name-input:focus::placeholder,
-.login form.login-content .login-box .input-feild input.pass-input:focus::placeholder {
+.main-layout .login .container form.login-content .login-box .input-feild input.name-input:focus::placeholder,
+.main-layout .login .container form.login-content .login-box .input-feild input.pass-input:focus::placeholder {
   color: transparent;
 }
-.login form.login-content .login-box .input-feild span.icon {
+.main-layout .login .container form.login-content .login-box .input-feild span.icon {
   display: block;
   padding: 10px;
 }
-.login form.login-content .login-box .input-feild span.icon svg {
+.main-layout .login .container form.login-content .login-box .input-feild span.icon svg {
   color: var(--second-color);
 }
-.login form.login-content .login-box .input-feild span.eye {
+.main-layout .login .container form.login-content .login-box .input-feild span.eye {
   padding: 10px;
 }
-.login form.login-content .login-box .input-feild span.eye svg:last-child {
+.main-layout .login .container form.login-content .login-box .input-feild span.eye svg:last-child {
   color: var(--second-color);
   size: 2em;
 }
-.login form.login-content .login-box button {
+.main-layout .login .container form.login-content .login-box button {
   display: block;
   margin: 10px auto;
   background: var(--second-color);
@@ -91,13 +93,13 @@
   opacity: 0.9;
   transition: 0.3s;
 }
-.login form.login-content .login-box button:hover {
+.main-layout .login .container form.login-content .login-box button:hover {
   opacity: 1;
 }
-.login form.login-content .login-box button:active {
+.main-layout .login .container form.login-content .login-box button:active {
   transform: scale(0.95);
 }
-.login form.login-content .login-box .or-option {
+.main-layout .login .container form.login-content .login-box .or-option {
   border-radius: 50%;
   background-color: var(--second-color);
   color: #fff;
@@ -110,7 +112,7 @@
   margin: 50px auto 20px;
   position: relative;
 }
-.login form.login-content .login-box .or-option::before {
+.main-layout .login .container form.login-content .login-box .or-option::before {
   content: "";
   position: absolute;
   width: 120px;
@@ -118,7 +120,7 @@
   right: -120px;
   background-color: var(--second-color);
 }
-.login form.login-content .login-box .or-option::after {
+.main-layout .login .container form.login-content .login-box .or-option::after {
   content: "";
   position: absolute;
   width: 120px;
@@ -126,13 +128,13 @@
   left: -120px;
   background-color: var(--second-color);
 }
-.login form.login-content .login-box ul {
+.main-layout .login .container form.login-content .login-box ul {
   list-style: none;
   display: flex;
   justify-content: center;
   gap: 10px;
 }
-.login form.login-content .login-box ul li {
+.main-layout .login .container form.login-content .login-box ul li {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -140,13 +142,13 @@
   justify-content: center;
   align-items: center;
 }
-.login form.login-content .login-box ul li:first-child {
+.main-layout .login .container form.login-content .login-box ul li:first-child {
   background-color: #4267b2;
 }
-.login form.login-content .login-box ul li:last-child {
+.main-layout .login .container form.login-content .login-box ul li:last-child {
   background-color: #ea4335;
 }
-.login form.login-content .login-box ul li a {
+.main-layout .login .container form.login-content .login-box ul li a {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
