--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -1,177 +1,181 @@
 .profile {
-	grid-area: main;
+	min-height: var(--main-layout-height);
 	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-	padding: 20px;
-	@media (max-width: 768px) {
-		flex-direction: column;
-	}
-
-	.user-image {
-		border-radius: 10px;
-		box-shadow: var(--boxShadow);
-		background-color: var(--boxes-bg);
-		width: 30%;
+	align-items: center;
+	.profile-wrapper {
 		display: flex;
-		gap: 40px;
-		flex-direction: column;
-		justify-content: center;
+		justify-content: space-between;
+		gap: 20px;
+		width: 95%;
+		margin: auto;
 		@media (max-width: 768px) {
-			width: 100%;
-		}
-		.user-image-content {
-			display: flex;
 			flex-direction: column;
-			justify-content: space-between;
-			align-items: center;
-			img {
-				width: 200px;
-				height: 200px;
-				object-fit: contain;
-				border-radius: 50%;
-				box-shadow: 2px 2px 5px #c0c0c0;
-				@media (max-width: 768px) {
-					display: block;
-					margin: auto;
+		}
+		.user-image {
+			border-radius: 10px;
+			box-shadow: var(--boxShadow);
+			background-color: var(--boxes-bg);
+			width: 30%;
+			display: flex;
+			gap: 40px;
+			flex-direction: column;
+			justify-content: center;
+			@media (max-width: 768px) {
+				width: 100%;
+			}
+			.user-image-content {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				align-items: center;
+				img {
+					width: 200px;
+					height: 200px;
+					object-fit: contain;
+					border-radius: 50%;
+					box-shadow: 2px 2px 5px #c0c0c0;
+					@media (max-width: 768px) {
+						display: block;
+						margin: auto;
+					}
+				}
+				button {
+					width: fit-content;
+					margin: 10px auto 0;
+					padding: 10px 20px;
+					border: none;
+					background-color: #333;
+					color: white;
+					cursor: pointer;
+					border-radius: 6px;
 				}
 			}
-			button {
-				width: fit-content;
-				margin: 10px auto 0;
-				padding: 10px 20px;
-				border: none;
-				background-color: #333;
-				color: white;
-				cursor: pointer;
-				border-radius: 6px;
-			}
-		}
-		.user-configuration {
-			button {
-				padding: 10px;
-				color: var(--main-text-color);
-				background-color: var(--mainColor);
-				transition: 0.3s;
-				border: var(--main-border);
-				font-size: 17px;
-				display: block;
-				width: 80%;
-				border-radius: 10px;
-				font-family: "operator mono lig";
-				cursor: pointer;
-				margin: 0 auto 10px;
-				// border: none;
-				opacity: 0.8;
-				&:last-child {
-					background-color: var(--second-color);
-					color: var(--main-text-color);
-				}
-				&:hover {
-					opacity: 1;
-				}
-			}
-		}
-	}
-
-	.user-info {
-		border-radius: 10px;
-		box-shadow: var(--boxShadow);
-		background-color: var(--boxes-bg);
-		width: 70%;
-		@media (max-width: 768px) {
-			width: 100%;
-		}
-
-		h2 {
-			border-bottom: 1px solid #c0c0c0;
-			padding: 10px;
-		}
-		.user-info-box {
-			padding: 20px;
-			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-			gap: 20px;
-			.box {
-				box-shadow: var(--boxShadow);
-				padding: 10px;
-				border-radius: 10px;
-				background-color: var(--body-color);
-				h3 {
-					margin-bottom: 20px;
-				}
-				input {
+			.user-configuration {
+				button {
 					padding: 10px;
-					width: 100%;
+					color: var(--main-text-color);
+					background-color: var(--mainColor);
+					transition: 0.3s;
 					border: var(--main-border);
-					border-radius: 5px;
-					box-shadow: var(--boxShadow◘);
-					&:focus {
-						outline: none;
-						border-color: var(--second-color);
+					font-size: 17px;
+					display: block;
+					width: 80%;
+					border-radius: 10px;
+					font-family: 'operator mono lig';
+					cursor: pointer;
+					margin: 0 auto 10px;
+					// border: none;
+					opacity: 0.8;
+					&:last-child {
+						background-color: var(--second-color);
+						color: var(--main-text-color);
+					}
+					&:hover {
+						opacity: 1;
 					}
 				}
 			}
 		}
-	}
 
-	.change-password {
-		position: relative;
-		width: 70%;
-		@media (max-width: 767px) {
-			width: 100%;
+		.user-info {
+			border-radius: 10px;
+			box-shadow: var(--boxShadow);
+			background-color: var(--boxes-bg);
+			width: 70%;
+			@media (max-width: 768px) {
+				width: 100%;
+			}
+
+			h2 {
+				border-bottom: 1px solid #c0c0c0;
+				padding: 10px;
+			}
+			.user-info-box {
+				padding: 20px;
+				display: grid;
+				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+				gap: 20px;
+				.box {
+					box-shadow: var(--boxShadow);
+					padding: 10px;
+					border-radius: 10px;
+					background-color: var(--body-color);
+					h3 {
+						margin-bottom: 20px;
+					}
+					input {
+						padding: 10px;
+						width: 100%;
+						border: var(--main-border);
+						border-radius: 5px;
+						box-shadow: var(--boxShadow◘);
+						&:focus {
+							outline: none;
+							border-color: var(--second-color);
+						}
+					}
+				}
+			}
 		}
 
-		.compare-password,
-		.change-form {
-			box-shadow: var(--boxShadow);
-			border-radius: 10px;
-			background-color: var(--boxes-bg);
-			padding: 10px;
-			width: 80%;
-			height: 200px;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			// align-items: center;
+		.change-password {
+			position: relative;
+			width: 70%;
 			@media (max-width: 767px) {
-				position: relative;
-			}
-			h3 {
-				margin-bottom: 10px;
-				text-align: center;
-			}
-			input {
 				width: 100%;
-				padding: 10px;
-				border: none;
-				background-color: var(--body-color);
-				border-radius: 30px;
-				.error {
-					background-color: transparent;
-					color: var(--second-color);
-					padding: 0px 6px;
-				}
-				&:focus {
-					border: none;
-					outline: none;
-				}
 			}
-			.submit-password {
+
+			.compare-password,
+			.change-form {
+				box-shadow: var(--boxShadow);
+				border-radius: 10px;
+				background-color: var(--boxes-bg);
+				padding: 10px;
+				width: 80%;
+				height: 200px;
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
 				display: flex;
-				justify-content: center;
-				gap: 20px;
-				button {
+				flex-direction: column;
+				justify-content: space-between;
+				// align-items: center;
+				@media (max-width: 767px) {
+					position: relative;
+				}
+				h3 {
+					margin-bottom: 10px;
+					text-align: center;
+				}
+				input {
+					width: 100%;
 					padding: 10px;
-					background-color: var(--second-color);
-					border-radius: 10px;
-					color: var(--main-text-color);
 					border: none;
-					margin-top: 10px;
+					background-color: var(--body-color);
+					border-radius: 30px;
+					.error {
+						background-color: transparent;
+						color: var(--second-color);
+						padding: 0px 6px;
+					}
+					&:focus {
+						border: none;
+						outline: none;
+					}
+				}
+				.submit-password {
+					display: flex;
+					justify-content: center;
+					gap: 20px;
+					button {
+						padding: 10px;
+						background-color: var(--second-color);
+						border-radius: 10px;
+						color: var(--main-text-color);
+						border: none;
+						margin-top: 10px;
+					}
 				}
 			}
 		}
